--- a/css/Display.css
+++ b/css/Display.css
@@ -23,6 +23,9 @@ hr{
 div{
     /* border: 2px solid rgb(194, 194, 194); */
 }
+#ContentPlaceHolder1_lblMemberFollow_FollowStatus{
+    margin-left: 20px;
+}
 .mm{
     background-color: rgba(149, 157, 165, 0.8);
     box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 12px;
