--- a/Main.Master
+++ b/Main.Master
@@ -306,7 +306,7 @@
 
                                     <a href="/index.aspx" class="d-block">
                                         <img src="images/logo.gif" width="40" height="40" class="d-inline-block align-top" alt=""></a>
-                                    MKForun
+                                     ＭｕＫｅ
                                 </div>
                                 <!-- 上區塊內的右上區塊(使用者狀態區) -->
                                 <!-- xs.sm時隱藏，sm以上顯示，sm為4格，md為4格，lg為4格，置中-->
