--- a/Main.Master
+++ b/Main.Master
@@ -327,7 +327,7 @@
                                                                 <ItemTemplate>
                                                                     <asp:Label ID="Label1" runat="server">
                                                                         <%--<a href="DisplayPost.aspx?CboardID=<%#Eval("CboardID")%>&PostID=<%#Eval("PostID")%>#<%#Eval("Floor")%>">--%>
-                                                                        <asp:Button ID="Button1" runat="server" CommandName='<%#Eval("PostID")%>' CommandArgument='<%#Eval("CboardID")+" "+Eval("Floor")+" "+ Eval("PostID")%>' Text='<%# !(bool)Eval("Replied")
+                                                                        <asp:Button ID="Button1" runat="server" CommandName='<%#Eval("PostID")%>' CommandArgument='<%#Eval("CboardID")+" "+Eval("Floor")+" "+ Eval("PostID")+" "+Eval("PointID")%>' Text='<%# !(bool)Eval("Replied")
                                                                 ? Eval("PointID") == null
                                                                    ? Eval("LastEditTime") == null
                                                                         ? string.Format("新文章:「{0}」 {1}", ReplaceArticle(Eval("Title").ToString()), Eval("PostDate", "{0:yyyy/MM/dd}"))
