--- a/css/EditPost.css
+++ b/css/EditPost.css
@@ -33,13 +33,18 @@ hr{
             width: 60%;
             font-size: 18px;
         }
-        .zenbu select{
-          border: 1px none #e76c25;
-          box-shadow: 2px 1px 5px #e76c25;
-          border-radius:10px;
-          font-size: 18px;
+    .zenbu select {
+        border: 1px none #e76c25;
+        box-shadow: 2px 1px 5px #e76c25;
+        border-radius: 10px;
+        font-size: 18px;
+        background: transparent;
+    }
+.S select option {
+    background: #100f10;
+    background-color: #100f10;
+}
 
-        }
         .zenbu textarea{
             border: 1px none #e76c25;
             box-shadow: 2px 1px 4px #e76c25;
