--- a/Main.Master
+++ b/Main.Master
@@ -307,7 +307,7 @@
                                     <a href="/index.aspx" class="d-block">
                                         <img src="images/logo.gif" width="40" height="40" class="d-inline-block align-top" alt="">
                                         <br />
-                                        ＭｕＫｅ
+                                        <h3 class="WEtitle">ＭｕＫｅ</h3>
                                     </a>
                                      
                                 </div>
